# rtwk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  dbg  noasan  notracy  rel  run  test  trace  yesasan  yestracy
misc/: cool_image.patch
src/: CMakeLists.txt  aabb.cc  aabb.h  aaquad.cc  aaquad.h  box.cc  box.h  bvh.cc  bvh.h  camera.cc  camera.h  collection.h  color.h  constant_medium.cc  constant_medium.h  fixedvec.h  geometry.h  hit_face.h  hit_record.h  hittable.cc  hittable.h  hittable_list.cc  hittable_list.h  hittable_view.h  interval.h  main.cc  material.cc  material.h  medium.cc  medium.h  perlin.cc  perlin.h  progress.h  quad.cc  quad.h  random.cc  random.h  ray.h  renderer.cc  renderer.h  (+22 more)
src/collection/: bvh.h  hittable_list.h  hittable_view.h  list.h  poly_list.h  specialized_list.h  view.h  world.h
src/format/: aabb.h  interval.h  vec3.h
src/geometry/: box.h  constant_medium.h  quad.h  sphere.h
